2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/ChangeFramerate.cc:
	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	* plugins/actions/errorchecking/ErrorCheckingPlugin.cc:
	* plugins/actions/errorchecking/ErrorCheckingPreferences.h:
	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	* plugins/actions/findandreplace/FindAndReplace.cc:
	* plugins/actions/movesubtitles/MoveSubtitles.cc:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/scalesubtitles/ScaleSubtitles.cc:
	* plugins/actions/spellchecking/SpellChecking.cc:
	* plugins/actions/splitdocument/SplitDocument.cc:
	* plugins/actions/styleeditor/StyleEditor.cc:
	* plugins/actions/viewmanager/ViewManager.cc:
	Migrate to gktmm_utility::get_widget_derived.

2008-11-13  kitone  <kitone@gna.org>

	* src/ExtensionManager.cc:
	Support SE_DEV.

	* src/Makefile.am:
	Add DEV paths.

	* src/gui/DialogCharacterCodings.cc:
	* src/gui/DialogFileChooser.cc:
	* src/main.cc:
	Migrate to gktmm_utility::get_widget_derived.

2008-11-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gtkmm_utility.cc:
	* src/gtkmm_utility.h:
	New files.

	* src/utility.h:
	define SE_DEV_VALUE for dev help.

2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade:
	Fix: do not translate stock items. (Patch: Luboš Staněk)

2008-11-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gstreamer_utility.cc:
	* src/gstreamer_utility.h:
	* src/utility.cc:
	* src/utility.h:
	* src/vp/GStreamerPlayer.cc:
	* src/we/WaveformGenerator.cc:
	Move GStreamer utility code in new file gstreamer_utility.

2008-11-13  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add [type: gettext/ini] before the se-plugin name.

2008-11-13  kitone  <kitone@gna.org>

	* src/Options.cc:
	* src/Options.h:
	* src/main.cc:
	Remove unittest.

2008-11-13  kitone  <kitone@gna.org>

	* src/Default.h:
	* src/Makefile.am: